src/test/resources/public/input/typechecking/fail/main_structure/fail08.jova
class Test{

}

class Main {

  public int main() {
    return 0;
  }

  public int another_fun(){
	return 1;
  }
}